# nevoflux

./: .gitignore  README.md  eslint.config.mjs  findings.md  package-lock.json  package.json  progress.md  surfer.json
.github/workflows/: build.yml  code-linter.yml  finalize-release.yml  issue-metrics.yml  linux-release-build.yml  macos-aarch64-release-build.yml  macos-release-build.yml  macos-universal-release-build.yml  macos-x86_64-release-build.yml  test-runners.yml  windows-profile-build.yml  windows-release-build.yml
.husky/: pre-commit
cloudbuild/: Dockerfile  linux-aarch64-build.yaml  linux-build.yaml  linux-x86_64-build.yaml  windows-aarch64-build.yaml  windows-build.yaml  windows-pgo-build.yaml  windows-x86_64-build.yaml
cloudbuild/scripts/: trigger-all-builds.sh  upload-to-release.sh  wait-for-pgo.sh
configs/common/: mozconfig
configs/macos/: mozconfig
docs/plans/: 2026-01-18-native-agent-implementation-design.md  2026-01-22-channel-architecture-refactor-design.md  2026-02-01-jswindowactors-bridge-design.md  2026-02-01-jswindowactors-bridge-implementation.md  2026-03-07-gcb-runner-migration-design.md  2026-03-07-gcb-runner-migration-plan.md
native/nevoflux-agent/: README.md
prefs/zen/: nevoflux.yaml  zen.yaml
scripts/: copy-distribution.sh  download-language-packs.sh  launch-nevoflux.sh  package-extension.sh  reload-extension.sh  revert-zen-changes.sh  setup-native-host.sh  test-cross-compile-patches.sh  test-extension-minimal.sh
src/nevoflux/crates/nevoflux-kernel/: Cargo.toml
src/nevoflux/crates/nevoflux-kernel/src/: lib.rs
(+278 files in other folders)
