[package]
name = "nevoflux-kernel"
version = "0.1.0"
edition = "2021"
authors = ["NevoFlux Team"]
license = "MPL-2.0"
description = "NevoFlux browser kernel integration via UniFFI"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nevoflux_kernel"

[dependencies]
uniffi = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[features]
default = []
